2019-05-22  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline
	2018-05-10  Eric Botcazou  <ebotcazou@adacore.com>

	PR c++/85400
	* c-attribs.c (handle_visibility_attribute): Do not set no_add_attrs.

2019-04-30  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2019-04-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/89946
	* c-attribs.c (handle_patchable_function_entry_attribute): Add
	function comment.  Warn if arguments of the attribute are not positive
	integer constants.

2019-04-09  Eric Botcazou  <ebotcazou@adacore.com>

	* c-ada-spec.c (print_destructor): Deal with deleting destructors.
	(dump_ada_declaration) <FUNCTION_DECL>: Likewise.

2019-02-22  Release Manager

	* GCC 8.3.0 released.

2019-02-07  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2019-01-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/88968
	* c-omp.c (c_finish_omp_atomic): For bitfield atomics, update type
	variable after using BIT_FIELD_REF.

	2019-01-14  Jakub Jelinek  <jakub@redhat.com>

	* c-cppbuiltin.c (c_cpp_builtin): Define __cpp_guaranteed_copy_elision
	and __cpp_nontype_template_parameter_auto.  Add a comment that
	__cpp_template_auto is deprecated.

2019-01-08  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2018-11-28  Jakub Jelinek  <jakub@redhat.com>

	PR c++/88215
	* c-ubsan.c: Include langhooks.h.
	(ubsan_instrument_division): Change gcc_assert that main variants
	of op0 and op1 types are equal to gcc_checking_assert that the
	main variants are compatible types.

2018-08-17  Martin Liska  <mliska@suse.cz>

        PR other/86992
	* c.opt: Fix declaration of cilkplus.

2018-07-26  Release Manager

	* GCC 8.2.0 released.

2018-07-18  Martin Sebor  <msebor@redhat.com>

	PR middle-end/85602
	* c-warn.c (sizeof_pointer_memaccess_warning): Check for attribute
	nonstring.

2018-07-19  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2018-07-12  Richard Biener  <rguenther@suse.de>

	PR c/86453