@@ -1,6 +1,11 @@
 2019-08-29  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2019-06-25  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/90954
+	* c-c++-common/gomp/pr90954.c: New test.
+
 	2019-06-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/90950
